<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import
            alias="v"
            type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.barros.beerapp.ui.mainfragment.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".ui.mainfragment.MainFragment">

        <TextView
            android:id="@+id/title"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/title_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="16dp"
            android:backgroundTint="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/searchImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/present"
                    app:tint="@color/colorTextGrey"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_search" />

                <EditText
                    android:id="@+id/searchText"
                    style="@style/searchStyle"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:autofillHints="@string/search_text"
                    android:background="@null"
                    android:hint="@string/search_text"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:textColorHint="@color/colorTextGrey"
                    app:layout_constraintBottom_toBottomOf="@+id/searchImage"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/searchImage"
                    app:layout_constraintTop_toTopOf="@+id/searchImage"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewOffers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/colorAccent"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardViewSearch">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/infoTitle"
                    style="@style/offerStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/info_card_title"
                    app:layout_constraintBottom_toTopOf="@+id/infoDescription"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/infoImage" />

                <TextView
                    android:id="@+id/infoDescription"
                    style="@style/offerDescriptionStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/info_card_description"
                    app:layout_constraintBottom_toBottomOf="@+id/infoImage"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/infoTitle"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageView
                    android:id="@+id/infoImage"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/present"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_beer" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardViewOffers">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                app:chipSpacingHorizontal="16dp"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipBlonde"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blonde" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipLager"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lager" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMalts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/malts" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipStouts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stouts" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipPale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pale" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipAle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ale" />

            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

        <ProgressBar
            android:id="@+id/loadingProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardViewOffers" />

        <Button
            android:id="@+id/retryButton"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="@{() -> viewModel.updateUiState()}"
            android:text="@string/retry"
            android:textColor="@color/colorAccent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardViewOffers" />

        <TextView
            android:id="@+id/emptyList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_list_text"
            android:visibility="gone"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/itemList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>